force-app/main/default/objects/GSA_Finance__c/GSA_Finance__c.object-meta.xml
<CustomObject>
    <label>GSA Finance</label>
    <nameField>
        <displayFormat>GSA-F-{0000000000}</displayFormat>
        <label>GSA Finance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA Finances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>