force-app/main/default/objects/GSA_Finance__c/fields/GSA_Project__c.field-meta.xml
<CustomField>
    <fullName>GSA_Project__c</fullName>
    <label>GSA Project</label>
    <referenceTo>GSA_Project__c</referenceTo>
    <relationshipLabel>GSA Finances</relationshipLabel>
    <relationshipName>GSA_Finances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>