force-app/main/default/objects/GSA_Finance__c/fields/Unit_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Work__c</fullName>
    <label>Unit of Work</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>